--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
         run: dotnet build ${{inputs.solution-name}} --no-restore
 
       - name: Test execution 🧪
-        run: dotnet test ${{inputs.solution-name}} --no-build --verbosity normal
+        run: dotnet test ${{inputs.solution-name}} --no-build --verbosity normal --results-directory "test-results" --collect:"Code Coverage;Format=cobertura"
