--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,10 @@ jobs:
         run: dotnet build ${{inputs.solution-name}} --no-restore
 
       - name: Test execution 🧪
-        run: dotnet test ${{inputs.solution-name}} --no-build --verbosity normal --results-directory "test-results" --collect:"Code Coverage;Format=cobertura"
+        run: dotnet test ${{inputs.solution-name}} --no-build --verbosity minimal --collect:"Code Coverage;Format=cobertura" --results-directory "TestResults" --logger "trx;LogFileName=test-results.trx"
+
+      - name: Archive test reports 📦
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports
+          path: TestResults
