--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -44,13 +44,10 @@ jobs:
           EXPOSE 443
 
           FROM base AS final
-          WORKDIR /app
-          COPY --from=release/output /app/publish .
+          WORKDIR /app/${{inputs.image-name}}
+          COPY /release/output /app/${{inputs.image-name}}/ .
           ENTRYPOINT ["dotnet", "'${{inputs.api-entrypoint-binary}}'"]
           ' > Dockerfile
-
-      - name: why not ??
-        run: ls 
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
