--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           name: release-binaries
           path: release/output
-      
+
       - name: Archive test reports 📦
         uses: actions/upload-artifact@v4
         with:
@@ -46,17 +46,18 @@ jobs:
           path: test-results
   
   tests-and-quality:
-    uses: highbyte/sonarscan-dotnet@v2.4.1
-    with:
-      sonarProjectKey: ${{inputs.sonar-project-key}}
-      sonarProjectName: ${{ inputs.sonar-project-name }}
-      sonarOrganization: ${{ github.repository_owner }}
-      dotnetTestArguments: >-
-        --logger trx --collect:"XPlat Code Coverage" --
-        DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
-      sonarBeginArguments: >-
-        /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml"
-        -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
+    steps:
+      - uses: highbyte/sonarscan-dotnet@v2.3.3
+        with:
+          sonarProjectKey: ${{inputs.sonar-project-key}}
+          sonarProjectName: ${{ inputs.sonar-project-name }}
+          sonarOrganization: ${{ github.repository_owner }}
+          dotnetTestArguments: >-
+            --logger trx --collect:"XPlat Code Coverage" --
+            DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+          sonarBeginArguments: >-
+            /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml"
+            -d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx"
     env:
       SONAR_TOKEN: '${{ secrets.SONAR_TOKEN }}'
       GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
