--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,9 @@ jobs:
     steps:
       - name: "Sonar Scan - Test execution"
         uses: highbyte/sonarscan-dotnet@v2.3.3
+        env:
+          SONAR_TOKEN: '${{ secrets.SONAR_TOKEN }}'
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           sonarProjectKey: ${{inputs.sonar-project-key}}
           sonarProjectName: ${{ inputs.sonar-project-name }}
