--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
           path: test-results
   
   tests-and-quality:
+    if: ${{ inputs.sonar-project-key != '' }}
     name: "Sonar code quality validation"
     runs-on: ubuntu-latest
     steps:
